--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+<!-- Krok (1) -->
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
-    <script type="module" src="./scripts/index.js"></script>
-    <link rel="stylesheet" href="./assets/style.css">
+    <script type="module" src="./scripts/index.js"></script> <!-- Krok (2)-->
+    <link rel="stylesheet" href="./assets/style.css"> <!-- Krok (3)-->
     <title>ZDFRONPOL15</title>
   </head>
   <body>
